feat: added middeleware that handles the authentication part for all APIs
