# docs/swagger.json
@@ -20,6 +20,11 @@
     "paths": {
         "/auth/user/list": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Retrieve a list of all users",
                 "consumes": [
                     "application/json"
@@ -265,6 +270,11 @@
         },
         "/auth/user/update/{id}": {
             "patch": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Update user information by ID",
                 "consumes": [
                     "application/json"
@@ -370,6 +380,11 @@
         },
         "/auth/user/{id}": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Retrieve user details by ID",
                 "consumes": [
                     "application/json"
